--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -13,6 +13,7 @@
 @font-face {
     font-family: "Share Tech Mono", sans-serif;
     src: url(../fonts/Share_Tech_Mono/ShareTechMono-Regular.ttf);
+    font-weight: lighter;
 }
 @font-face {
     font-family: "Prompt", sans-serif;
@@ -46,7 +47,41 @@
     --gradient-electric-grass: linear-gradient(135deg, rgb(202, 248, 128) 0%, rgb(113, 206, 126) 100%);
     --gradient-midnight: linear-gradient(135deg, rgb(2, 3, 129) 0%, rgb(40, 116, 252) 100%);
     
-    --font-prompt-thin: "Prompt", sans-serif;
+
+    --font-family: "Prompt", sans-serif;
+    --font-size: 16px;
+    --line-height: 30px;
+    --font-weight: 300;
+    --bold-font-weight: 700;
+    --h1-font-family: "Prompt", sans-serif;
+    --h1-font-size: 32px;
+    --h1-line-height: 1.4;
+    --h1-font-weight: 200;
+    --h1-bold-font-weight: 700;
+    --h1-text-transform: none;
+    --h1-font-style: normal;
+    --h1-letter-spacing: 0.08em;
+    --h1-margin-bottom: 1.5rem;
+    --h2-font-family: Prompt, sans-serif;
+    --h2-font-size: 30px;
+    --h2-line-height: 1.4;
+    --h2-font-weight: var(--h1-font-weight);
+    --h2-bold-font-weight: var(--h1-bold-font-weight);
+    --h2-text-transform: var(--h1-text-transform);
+    --h2-font-style: var(--h1-font-style);
+    --h2-letter-spacing: 0.08em;
+    --h2-margin-bottom: 1.5rem;
+    --h3-font-family: Prompt, sans-serif;
+    --h3-font-size: 26px;
+    --h3-line-height: 1.4;
+    --h3-font-weight: var(--h1-font-weight);
+    --h3-bold-font-weight: var(--h1-bold-font-weight);
+    --h3-text-transform: var(--h1-text-transform);
+    --h3-font-style: var(--h1-font-style);
+    --h3-letter-spacing: 0.1em;
+    --h3-margin-bottom: 1.5rem;
+
+    --font-prompt: "Prompt", Arial, Helvetica, sans-serif;
     --font-heading: "Share Tech", sans-serif;
     --font-heading-mono: "Share Tech Mono", sans-serif; 
     --font-reddit-mono: "Reddit Mono", sans-serif;
@@ -90,7 +125,6 @@ body {
     padding: 0;
 }
 .menu{
-    top: 0;
     width: 100vw;
     background-color: var(--black-smooth);
     z-index: 10;
@@ -197,16 +231,17 @@ body {
     object-fit: cover;
 }
 .cyberSec{
-    font-family: var(--font-prompt-thin);
+    font-family: var(--font-prompt);
     font-weight: lighter;
-    font-size: 28px;
+    font-size: var(--font-size-large);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 75%;
+    width: 85%;
     text-align: center;
     z-index: var(--z-index-video-div);
+    letter-spacing: 1.9px;
 }
 .swip{
     position: absolute;
@@ -249,15 +284,15 @@ main {
         0 0 10px var(--accent-color),
         0 0 15px var(--accent-color);
 }
-
-h1 {
-    font-family: var(--heading-font);
-    margin:  var(--spacing-30) 0 var(--spacing-20);
-}
-
 h2 {
-    font-family: var(--heading-font);
-    margin: var(--spacing-15) 0;
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    unicode-bidi: isolate;
 }
 
 p {
@@ -282,4 +317,39 @@ ul > ul {
 
 .cta-session {
     margin: var(--spacing-25);
+}
+.feature-item1{
+    width: 100% ;
+    height: 100vh;
+}
+.feature-item h2{
+    font-family: var(--font-prompt);
+    font-size: var(--font-size-medium);
+    font-weight: lighter;
+    letter-spacing: 3px;
+    text-align: center;
+    margin: 20px;
+}
+.feature-item p{
+    font-family: var(--font-prompt);
+    margin: 0 5px 0 30px;
+    font-size: 14px;
+    letter-spacing: 0.08em;
+    text-align: center;
+}
+.feature-content .content-level ul{
+    position: relative;
+    text-align: center;    
+    margin-top: 20px;
+    font-family: var(--font-prompt);
+    overflow: hidden;
+    
+    
+}
+.feature-content .content-level ul li{
+    padding: 20px;
+    display: inline;
+}
+.feature-conten .content-level ul li:hover{
+
 }
