--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -147,7 +147,7 @@ body {
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: -40%;
+    top: -50%;
     transition: top 1s ease-out;
     height: 230px;
     width: 100%;
@@ -234,20 +234,20 @@ body {
 .cyberSec{
     font-family: var(--font-prompt);
     font-weight: lighter;
-    font-size: var(--font-size-large);
+    font-size: var(--font-size-medium);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 85%;
+    width: 90%;
     text-align: center;
     z-index: var(--z-index-video-div);
-    letter-spacing: 1.9px;
+    letter-spacing: 1px;
 }
 .swip{
     position: absolute;
     top: 75%;
-    left: 47%;
+    left: 45%;
     z-index: var(--z-index-video-div);
     overflow: hidden;
     cursor: pointer;
@@ -262,9 +262,10 @@ a .swip{
     position: absolute;
     top: 70%;
     left: 50%;
-    transform: translate(-20%);
+    transform: translate(-50%);
     font-size: 1em;
-    width: 70%;
+    width: 60%;
+    padding-left: 10px;
     z-index: var(--z-index-video-div);
 }
 @keyframes moveUpDown{
@@ -317,10 +318,10 @@ ul > ul {
 }
 .feature-item{
     overflow: hidden;
-}
-.feature-item1{
-    width: 100%;
-    height: 100vh;
+    margin-right: 25px;
+    margin-left: -20px;
+    padding-right: 5px;
+    
 }
 .feature-item h2{
     font-family: var(--font-prompt);
@@ -333,13 +334,17 @@ ul > ul {
 .feature-item p{
     font-family: var(--font-prompt);
     margin: 0 45px 0 30px;
-    font-size: 14px;
+    font-size: var(--font-size-small);
+    width: 90%;
     letter-spacing: 0.08em;
     text-align: center;
 }
+.feature-content p{
+    font-size: var(--font-size-small);
+}
 .feature-content .content-level{
     position: absolute;
-    top: 155%;
+    top: 190%;
     width: 100%;
     border-bottom: 1px solid var(--vivid-cyan-blue);
     overflow: hidden;
@@ -387,14 +392,15 @@ ul > ul {
 .image{
     transition: opacity 0.6s ease-in-out;
     position: absolute;
-    top: 170%;
+    top: 210%;
 }
 .img{
     border-radius: 5px;
     transition: filter 0.5s ease, transform 0.7s ease-in;
-    margin: 15px 30px 0 10px;
-    z-index: -1;
+    margin: 10px 10px 0 25px;
+    padding-bottom: 20px;
     cursor: pointer;
+    width: 35%;
 }
 .img:hover{
     filter: brightness(1.5);
@@ -402,7 +408,7 @@ ul > ul {
 }
 .benefit-div{
     position: absolute;
-    top: 260%;
+    top: 300%;
 }
 .benefit-div h2{
     color: var(--white);
@@ -418,10 +424,11 @@ ul > ul {
 }
 .feature-itemb{
     position: absolute;
-    top: 350%;
+    top: 450%;
 }
 
 .benefits {
+    overflow: hidden;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -431,11 +438,11 @@ ul > ul {
 }
 
 .benefit-container { 
-    height: calc(40vh - 10px); /* Ajuste a altura do container */
-    width: calc(50% - 10px); /* Ajuste a largura do container */
+    height: calc(40vh - 10px); 
+    width: 70%;
     text-align: center;
     border: 2px solid var(--vivid-purple);
     border-radius: 3px;
-    margin-bottom: 20px; /* Adicione uma margem entre os containers */
-    box-sizing: border-box; /* Garante que a borda esteja dentro do tamanho do container */
+    margin-bottom: 20px;
+    margin-left: 45px;
 }
