--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,4 @@
+
 @charset "UTF-8";
 
 @font-face {
@@ -15,11 +16,13 @@
     src: url(../fonts/Share_Tech_Mono/ShareTechMono-Regular.ttf);
     font-weight: lighter;
 }
+
 @font-face {
     font-family: "Prompt", sans-serif;
     src: url(../fonts/Prompt/Prompt-Thin.ttf);
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
 
@@ -38,7 +41,7 @@ html{
     --pale-cyan-blue: #8ed1fc;
     --vivid-cyan-blue: #0693e3;
     --vivid-purple: #9b51e0;
-    
+
     --gradient-vivid-cyan-blue-to-vivid-purple: linear-gradient(135deg, rgba(6, 147, 227, 1) 0%, rgb(155, 81, 224) 100%);
     --gradient-light-green-cyan-to-vivid-green-cyan: linear-gradient(135deg, rgb(122, 220, 180) 0%, rgb(0, 208, 130) 100%);
     --gradient-luminous-vivid-amber-to-luminous-vivid-orange: linear-gradient(135deg, rgba(252, 185, 0, 1) 0%, rgba(255, 105, 0, 1) 100%);
@@ -51,7 +54,7 @@ html{
     --gradient-pale-ocean: linear-gradient(135deg, rgb(255, 245, 203) 0%, rgb(182, 227, 212) 50%, rgb(51, 167, 181) 100%);
     --gradient-electric-grass: linear-gradient(135deg, rgb(202, 248, 128) 0%, rgb(113, 206, 126) 100%);
     --gradient-midnight: linear-gradient(135deg, rgb(2, 3, 129) 0%, rgb(40, 116, 252) 100%);
-    
+
 
     --font-family: "Prompt", sans-serif;
     --font-size: 16px;
@@ -88,13 +91,13 @@ html{
 
     --font-prompt: "Prompt", Arial, Helvetica, sans-serif;
     --font-heading: "Share Tech", sans-serif;
-    --font-heading-mono: "Share Tech Mono", sans-serif; 
+    --font-heading-mono: "Share Tech Mono", sans-serif;
     --font-reddit-mono: "Reddit Mono", sans-serif;
     --font-size-small: 13px;
     --font-size-medium: 20px;
     --font-size-large: 36px;
     --font-size-x-large: 42px;
-    
+
     --spacing-20: 0.44rem;
     --spacing-30: 0.67rem;
     --spacing-40: 1rem;
@@ -102,7 +105,7 @@ html{
     --spacing-60: 2.25rem;
     --spacing-70: 3.38rem;
     --spacing-80: 5.06rem;
-    
+
     --shadow-natural: 6px 6px 9px rgba(0, 0, 0, 0.2);
     --shadow-deep: 12px 12px 50px rgba(0, 0, 0, 0.4);
     --shadow-sharp: 6px 6px 0px rgba(0, 0, 0, 0.2);
@@ -110,22 +113,25 @@ html{
     --shadow-crisp: 6px 6px 0px rgba(0, 0, 0, 1);
 
     --z-index-video-div: 15;
-  }
-  
+}
+
 * {
     color: var(--cyan-bluish-gray);
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
 }
+
 body {
     background-color: var(--black);
     color: var(--white);
     margin: 0;
     padding: 0;
 }
-.menu{
+
+.menu {
     width: 100vw;
     background-color: var(--black-smooth);
     z-index: 10;
@@ -133,21 +139,32 @@ body {
     overflow: hidden;
 }
 
-.menu .icon{
+.menu .icon {
     overflow: hidden;
     cursor: pointer;
     font-size: 2em;
     position: relative;
     margin-top: 5px;
     left: 50%;
+    -webkit-transform: translate(-50%);
+    -ms-transform: translate(-50%);
     transform: translate(-50%);
 }
-.menu-collapsed{
+
+.menu-collapsed {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     position: absolute;
     top: -50%;
+    -webkit-transition: top 1s ease-out;
+    -o-transition: top 1s ease-out;
     transition: top 1s ease-out;
     height: 230px;
     width: 100%;
@@ -155,7 +172,8 @@ body {
     z-index: 20;
     background-color: var(--black-smooth);
 }
-.menu-collapsed .xmark{
+
+.menu-collapsed .xmark {
     position: absolute;
     top: 1%;
     right: 2%;
@@ -163,42 +181,52 @@ body {
     font-size: 1.6em;
     cursor: pointer;
 }
-.menu-collapsed ul li{
+
+.menu-collapsed ul li {
     font-family: var(--font-reddit-mono);
     margin: var(--spacing-40);
     padding-bottom: 5px;
     text-align: center;
     cursor: pointer;
 }
+
 .row1,
-.row2, 
+.row2,
 .row3,
 .row4,
-.row5{
+.row5 {
+    -webkit-transition: background 1s ease-in-out, background-position 1s ease-in-out;
+    -o-transition: background 1s ease-in-out, background-position 1s ease-in-out;
     transition: background 1s ease-in-out, background-position 1s ease-in-out;
     background-color: transparent;
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(50%, #ffffff), color-stop(50%, transparent));
+    background-image: -o-linear-gradient(left, #ffffff 50%, transparent 50%);
     background-image: linear-gradient(to right, #ffffff 50%, transparent 50%);
     background-size: 200% 100%;
     background-position: 100% 0;
 }
-.menu-collapsed ul li:nth-child(1){
+
+.menu-collapsed ul li:nth-child(1) {
     margin-top: 30px;
 }
+
 .menu-collapsed ul li:nth-child(1):hover .row1,
 .menu-collapsed ul li:nth-child(2):hover .row2,
 .menu-collapsed ul li:nth-child(3):hover .row3,
 .menu-collapsed ul li:nth-child(4):hover .row4,
-.menu-collapsed ul li:nth-child(5):hover .row5{
+.menu-collapsed ul li:nth-child(5):hover .row5 {
     background-color: #ffffff;
     background-position: 0 0;
 
 }
-.list-row{
+
+.list-row {
     border: none;
     width: 150px;
     height: 1.5px;
     background-color: #ffffff22;
 }
+
 .overflow {
     background-color: rgb(0, 0, 0, 0.5);
     height: 100vh;
@@ -206,15 +234,19 @@ body {
     width: 100vw;
     z-index: 6;
 }
-.overflow-menu{
+
+.overflow-menu {
     background-color: rgba(0, 0, 0, 0.9);
     height: 100vh;
     position: fixed;
     width: 100vw;
     z-index: 16;
     display: none;
+    -webkit-transition: opacity 1.5s ease-in-out;
+    -o-transition: opacity 1.5s ease-in-out;
     transition: opacity 1.5s ease-in-out;
 }
+
 .video {
     position: relative;
     height: 100vh;
@@ -229,22 +261,27 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+    -o-object-fit: cover;
     object-fit: cover;
 }
-.cyberSec{
+
+.cyberSec {
     font-family: var(--font-prompt);
     font-weight: lighter;
     font-size: var(--font-size-medium);
     position: absolute;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     width: 90%;
     text-align: center;
     z-index: var(--z-index-video-div);
     letter-spacing: 1px;
 }
-.swip{
+
+.swip {
     position: absolute;
     top: 75%;
     left: 45%;
@@ -252,30 +289,60 @@ body {
     overflow: hidden;
     cursor: pointer;
     font-size: 3em;
+    -webkit-animation: moveUpDown 2s ease-in-out infinite;
     animation: moveUpDown 2s ease-in-out infinite;
 }
-a .swip{
+
+a .swip {
     color: white;
 
 }
-.scrolldown{
+
+.scrolldown {
     position: absolute;
     top: 70%;
     left: 50%;
+    -webkit-transform: translate(-50%);
+    -ms-transform: translate(-50%);
     transform: translate(-50%);
-    font-size: 1em;
-    width: 60%;
-    padding-left: 10px;
+    font-size: 1.2em;
+    width: 80%;
+    padding-left: 30px;
     z-index: var(--z-index-video-div);
+    font-family: var(--font-heading);
+    font-size: var(--font-size-small);
 }
-@keyframes moveUpDown{
-    0%{
+
+@-webkit-keyframes moveUpDown {
+    0% {
+        -webkit-transform: translateY(0);
         transform: translateY(0);
     }
-    50%{
+
+    50% {
+        -webkit-transform: translateY(10px);
         transform: translateY(10px);
     }
-    100%{
+
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+
+@keyframes moveUpDown {
+    0% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+
+    50% {
+        -webkit-transform: translateY(10px);
+        transform: translateY(10px);
+    }
+
+    100% {
+        -webkit-transform: translateY(0);
         transform: translateY(0);
     }
 }
@@ -300,38 +367,42 @@ ul {
     padding: 0;
     margin: var(--spacing-20) 0;
 }
- 
+
 ul li {
     margin-left: var(--spacing-25);
     margin-bottom: var(--spacing-15);
     font-family: var(--body-font);
 }
 
-ul > ul {
+ul>ul {
     margin-left: var(--spacing-35);
 }
 
 .cta-session {
     position: absolute;
     margin: var(--spacing-25);
-    top: 400%;
+    top: 5000%;
 }
-.feature-item{
+
+.feature-item {
     overflow: hidden;
     margin-right: 25px;
     margin-left: -20px;
     padding-right: 5px;
-    
+
 }
-.feature-item h2{
+
+.feature-item h2 {
     font-family: var(--font-prompt);
     font-size: var(--font-size-medium);
     font-weight: lighter;
     letter-spacing: 3px;
     text-align: center;
-    margin: 20px;
+    margin: 20px 20px 20px 30px;
+    width: 90%;
 }
-.feature-item p{
+
+.feature-item p {
     font-family: var(--font-prompt);
     margin: 0 45px 0 30px;
     font-size: var(--font-size-small);
@@ -339,10 +410,12 @@ ul > ul {
     letter-spacing: 0.08em;
     text-align: center;
 }
-.feature-content p{
+
+.feature-content p {
     font-size: var(--font-size-small);
 }
-.feature-content .content-level{
+
+.feature-content .content-level {
     position: absolute;
     top: 190%;
     width: 100%;
@@ -350,11 +423,12 @@ ul > ul {
     overflow: hidden;
 
 }
+
 .feature-content .content-level button {
     overflow: hidden;
-    position: relative; 
+    position: relative;
     padding: 20px;
-    display: inline;    
+    display: inline;
     width: 30%;
     background-color: transparent;
     color: var(--white);
@@ -363,10 +437,15 @@ ul > ul {
     cursor: pointer;
     text-align: center;
     margin: 15px 0 15px 5px;
-    font-size: 1em;
+    font-family: var(--font-prompt);
+    font-weight: lighter;
+    font-size: 0.8em;
+    -webkit-transition: color 0.5s ease-in;
+    -o-transition: color 0.5s ease-in;
     transition: color 0.5s ease-in;
 }
-.feature-content .content-level button:after{
+
+.feature-content .content-level button:after {
     margin-bottom: -10px;
     content: "";
     position: absolute;
@@ -375,74 +454,105 @@ ul > ul {
     width: 0;
     left: 0;
     bottom: -8px;
+    -webkit-transition: 1s;
+    -o-transition: 1s;
     transition: 1s;
 }
-.feature-content .content-level button:hover:after{
+
+.feature-content .content-level button:hover:after {
     width: 100%;
 }
-.feature-content .button-content{
+
+.feature-content .button-content {
     width: 100vw;
-    height: 100vh;
+    height: 80vh;
 }
-.text{
+
+.text {
     margin: 200px;
     position: absolute;
     top: 140%;
 }
-.image{
+
+.image {
+    -webkit-transition: opacity 0.6s ease-in-out;
+    -o-transition: opacity 0.6s ease-in-out;
     transition: opacity 0.6s ease-in-out;
     position: absolute;
     top: 210%;
 }
-.img{
+
+.img {
     border-radius: 5px;
+    -webkit-transition: -webkit-filter 0.5s ease, -webkit-transform 0.7s ease-in;
+    transition: -webkit-filter 0.5s ease, -webkit-transform 0.7s ease-in;
+    -o-transition: filter 0.5s ease, transform 0.7s ease-in;
     transition: filter 0.5s ease, transform 0.7s ease-in;
+    transition: filter 0.5s ease, transform 0.7s ease-in, -webkit-filter 0.5s ease, -webkit-transform 0.7s ease-in;
     margin: 10px 10px 0 25px;
     padding-bottom: 20px;
     cursor: pointer;
     width: 35%;
 }
-.img:hover{
+
+.img:hover {
+    -webkit-filter: brightness(1.5);
     filter: brightness(1.5);
+    -webkit-transform: scale(1.07);
+    -ms-transform: scale(1.07);
     transform: scale(1.07);
 }
-.benefit-div{
+
+.benefit-div {
     position: absolute;
-    top: 300%;
+    top: 305%;
 }
-.benefit-div h2{
+
+.benefit-div h2 {
     color: var(--white);
     text-align: left;
     margin-left: 30px;
+    font-family: var(--font-heading-mono);
     margin-bottom: 5px;
 }
-.separate{
+
+.separate {
     margin-left: 20px;
     width: 80vw;
     height: 1px;
     background-color: var(--vivid-purple);
 }
-.feature-itemb{
+
+.feature-itemb {
     position: absolute;
-    top: 450%;
+    top: 8000%;
 }
 
 .benefits {
     overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     width: 100vw;
-    height: 80vh;
+    height: 200vh;
     margin-top: 15px;
+    padding-bottom: 400px;
 }
-
-.benefit-container { 
-    height: calc(40vh - 10px); 
+.benefit-container {
     width: 70%;
+    height: 150px;
+    margin: 0 45px;
+    padding: 5px;
     text-align: center;
+    font-family: var(--font-reddit-mono);
+    font-size: var(--font-size-small);
     border: 2px solid var(--vivid-purple);
     border-radius: 3px;
-    margin-bottom: 20px;
-    margin-left: 45px;
+    overflow: hidden;
+    
 }
