--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -124,6 +124,7 @@ html {
     overflow-x: hidden;
 }
 
+
 body {
     background-color: var(--black);
     color: var(--white);
@@ -387,7 +388,6 @@ ul>ul {
     margin-right: 25px;
     margin-left: -20px;
     padding-right: 5px;
-
 }
 
 .feature-item h2 {
@@ -401,10 +401,12 @@ ul>ul {
 }
 
 .feature-item p {
+    display: flex;
+    justify-content: center;
     font-family: var(--font-prompt);
-    margin: 0 45px 0 30px;
+    margin: 0 0 0 25px;
     font-size: var(--font-size-small);
-    width: 90%;
+    width: 100%;
     letter-spacing: 0.08em;
     text-align: center;
 }
@@ -415,7 +417,7 @@ ul>ul {
 
 .feature-content .content-level {
     position: absolute;
-    top: 190%;
+    top: 170%;
     width: 100%;
     border-bottom: 1px solid var(--vivid-cyan-blue);
     overflow: hidden;
@@ -463,13 +465,8 @@ ul>ul {
 
 .feature-content .button-content {
     width: 100vw;
-    height: 80vh;
-}
+    height: 80%;
 
-.text {
-    margin: 200px;
-    position: absolute;
-    top: 140%;
 }
 
 .image {
@@ -477,7 +474,7 @@ ul>ul {
     -o-transition: opacity 0.6s ease-in-out;
     transition: opacity 0.6s ease-in-out;
     position: absolute;
-    top: 210%;
+    top: 190%;
 }
 
 .img {
